[package]
name = "alpaca_markets_terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
alpaca_markets = { path = "../alpaca_markets", features = ["market_data", "websocket", "trading"] }
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
